# crucible

./: Cargo.toml  Makefile  README.md
.github/workflows/: backend-ci.yml
backend/: Cargo.toml  Dockerfile  README.md  TRACING_IMPLEMENTATION_SUMMARY.md  VERIFICATION_REPORT.md  coverage.rs  docker-compose-jaeger.yml  jaeger-sampling.json  temp_cargo.toml  test_coverage.rs
backend/benches/: performance.rs
backend/migrations/: 20260427000000_init.sql
backend/src/: config.rs  error.rs  jobs.rs  lib.rs  main.rs  telemetry.rs
backend/src/api/: mod.rs
backend/src/api/handlers/: mod.rs  profiling.rs  stellar.rs
backend/src/api/middleware/: logging.rs
backend/src/config/: mod.rs  reload.rs
backend/src/services/: TRACING_RECON.md  alerts.rs  business_metrics.rs  error_recovery.rs  feature_flags.rs  log_aggregator.rs  mod.rs  sys_metrics.rs  tracing.rs
backend/src/test_utils/: mocks.rs
backend/src/utils/: mod.rs  serialization.rs  validation.rs  xdr.rs
backend/tests/: api_tests.rs  tracing_integration.rs
contracts/crucible/: Cargo.toml
contracts/crucible/src/: account.rs  cost.rs  env.rs  lib.rs  macros.rs  prelude.rs  sim.rs  token.rs
contracts/crucible/test_snapshots/account/tests/: test_account_builder_fluent.1.json  test_account_creation_and_funding.1.json  test_token_transfer_between_accounts.1.json
contracts/crucible/test_snapshots/env/tests/: measure_returns_non_zero_instructions.1.json
contracts/crucible/test_snapshots/macros/tests/: test_macro_multi_success.1.json  test_macro_not_emitted_success.1.json  test_macro_panic_wrong_count.1.json
contracts/crucible/test_snapshots/token/tests/: test_approve_and_check_allowance.1.json  test_burn_reduces_balance.1.json  test_clawback_reduces_balance.1.json  test_mint_and_check_balance.1.json  test_new_token_with_symbol_and_decimals.1.json  test_transfer_between_accounts.1.json
examples/counter/src/: lib.rs
examples/escrow/src/: lib.rs
examples/token/src/: lib.rs
examples/token/test_snapshots/test/: test_admin_can_mint.1.json  test_approve_and_transfer_from.1.json  test_balance_starts_at_zero.1.json  test_burn_more_than_balance_reverts.1.json  test_burn_reduces_balance.1.json  test_mint_emits_event.1.json  test_mint_without_auth_reverts.1.json  test_transfer_from_exceeds_allowance_reverts.1.json  test_transfer_insufficient_balance_reverts.1.json  test_transfer_moves_balance.1.json  test_xlm_token_is_independent.1.json
examples/vesting/src/: lib.rs
examples/vesting/test_snapshots/test/: test_claim_after_revoke_reverts.1.json  test_claim_before_cliff_reverts.1.json  test_claim_transfers_tokens_to_beneficiary.1.json  test_full_vesting_after_duration.1.json  test_nothing_claimable_at_cliff_start.1.json  test_nothing_claimable_before_cliff.1.json  test_partial_claim_then_more.1.json  test_partial_vesting_halfway_through.1.json  test_revoke_returns_unvested_tokens_to_admin.1.json  test_vested_increases_monotonically_with_time.1.json
