[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[features]
testutils = ["mockall"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
dotenvy = "0.15"
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
apalis = { version = "0.6" }
apalis-redis = "0.6"
rust_decimal = { version = "1.35", features = ["serde"] }
stellar-xdr = { version = "21.0", features = ["std"] }
base64 = "0.22"
validator = { version = "0.19", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.4"
mockall = { version = "0.13", optional = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
rust_decimal_macros = "1.35"
criterion = { version = "0.5", features = ["async_tokio"] }
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"

[[bench]]
name = "performance"
harness = false

