[package]
name = "crucible"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["derive"]
derive = ["dep:crucible-macros"]

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
crucible-macros = { workspace = true, optional = true }
